# Project_6

./: .gitignore  main.py  pyproject.toml  requirements.txt  retrain_from_feedback.py
feedback_data/: log.csv
utils/: feedback_logger.py
