[project]
name = "project-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioice==0.10.2",
    "aiortc==1.14.0",
    "altair==5.5.0",
    "anyio==4.14.1",
    "attrs==26.1.0",
    "av==16.1.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2026.6.17",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.2",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cryptography==49.0.0",
    "cycler==0.12.1",
    "dnspython==2.8.0",
    "filelock==3.29.5",
    "fonttools==4.63.0",
    "fsspec==2026.6.0",
    "gitdb==4.0.12",
    "gitpython==3.1.50",
    "google-crc32c==1.8.0",
    "h11==0.16.0",
    "httptools==0.8.0",
    "idna==3.18",
    "ifaddr==0.2.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.5.0",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "matplotlib==3.11.0",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "narwhals==2.23.0",
    "networkx==3.6.1",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "packaging==24.2",
    "pandas==2.3.3",
    "pillow==10.4.0",
    "protobuf==5.29.6",
    "psutil==7.2.2",
    "py-cpuinfo==9.0.0",
    "pyarrow==24.0.0",
    "pycparser==3.0",
    "pydeck==0.9.3",
    "pyee==13.0.1",
    "pygments==2.20.0",
    "pylibsrtp==1.0.0",
    "pyopenssl==26.3.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.32",
    "pytz==2026.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "requests==2.34.2",
    "rich==13.9.4",
    "rpds-py==2026.6.3",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "smmap==5.0.3",
    "starlette==1.3.1",
    "streamlit==1.58.0",
    "streamlit-webrtc==0.74.2",
    "sympy==1.14.0",
    "tenacity==9.1.4",
    "toml==0.10.2",
    "torch==2.12.1",
    "torchvision==0.27.1",
    "tornado==6.5.7",
    "tqdm==4.68.3",
    "typing-extensions==4.16.0",
    "tzdata==2026.2",
    "ultralytics==8.3.28",
    "ultralytics-thop==2.0.20",
    "urllib3==2.7.0",
    "uvicorn==0.49.0",
    "watchdog==6.0.0",
    "websockets==16.0",
]
